# GCNO

./: CMakeLists.txt  NormalOrientation-config.cmake.in  README.md  RFEPS-config.cmake.in
MAIN/: CMakeLists.txt  EAR.hpp  Knn.hpp  MyBaseModel.hpp  MyHalfEdgeModel.hpp  MyMathSupport.hpp  MyPointCloudModel.hpp  MyRPD.hpp  MyRPD_rnn.hpp  PlaneCut.hpp  laplaceIGL.hpp  main.cpp
MAIN/nanoflann/examples/: pointcloud_example.cpp
MAIN/nanoflann/perf-tests/: stats_raw_results-26_aug_2011.tar (Xrvitd-PC 的冲突副本 2022-06-10).bz
cmake/: FindBGAL.cmake
data/: 01_82-block.xyz  82-block_noisy.xyz  BKLineColorBar.mtl  BS_1000_torus.xyz  BS_4000_holes.xyz  BS_4000_torus.xyz  CVTLBFGSTest (Xrvitd-PC 的冲突副本 2022-07-25).ps  CVTLBFGSTest.ps  CVTNewton.ps  CapCVTLBFGSTest (Xrvitd-PC 的冲突副本 2022-07-25).ps  CapCVTLBFGSTest.ps  CenterPoints_01_82-block.xyz  CenterPoints_82-block_noisy.xyz  Denoise_82-block_noisy.xyz  Denoise_Final_01_82-block.xyz  Denoise_Final_82-block_noisy.xyz  DrawTest.ps  FeaturePointNum_01_82-block.txt  FeaturePointNum_82-block_noisy.txt  FeaturePointsNum_82-block_noisy.txt  FeaturePoints_01_82-block.xyz  FeaturePoints_82-block_noisy.xyz  FinalPointCloud1_01_82-block.xyz  FinalPointCloud1_82-block_noisy.xyz  FinalPointCloud2_01_82-block.xyz  FinalPointCloud_WithoutFeature_01_82-block.xyz  FinalPointCloud_WithoutFeature_82-block_noisy.xyz  ICPTest.txt  MyCapCVT2DTest (Xrvitd-PC 的冲突副本 2022-07-25).ps  MyCapCVT2DTest.ps  PoissonPoints_qc_01_82-block.xyz  PoissonPoints_qc_82-block_noisy.xyz  ShowColorR2_01_82-block.txt  ShowColorR2_82-block_noisy.txt  ShowColorR3_01_82-block.txt  ShowColorR3_82-block_noisy.txt  ShowNormal_01_82-block.xyz  ShowNormal_82-block_noisy.xyz  TessellationTest.ps  WS0.25_4000_holes.xyz  (+15 more)
data/MyResult/: BS_1000_torus_End.xyz  BS_4000_holes_End.xyz  BS_4000_torus_End.xyz  WS0.25_4000_holes_End.xyz  WS0.25_4000_torus_End.xyz  WS0.5_4000_holes_End.xyz  WS0.5_4000_torus_End.xyz  WS_4000_holes_End.xyz  WS_4000_torus_End.xyz  WireFrame_trebol_End.xyz
include/: CMakeLists.txt
include/BGAL/: CMakeLists.txt  include.rar
include/BGAL/Algorithm/BOC/: BOC.h
include/BGAL/BaseShape/: KDTree.h  Line.h  Point.h  Polygon.h  Triangle.h
include/BGAL/CVTLike/: CPD.h  CVT (Xrvitd-PC 的冲突副本 2022-07-25).h  CVT.h
include/BGAL/Draw/: DrawPS.h
include/BGAL/Geodesic/: AbstractMethod.h
include/BGAL/Geodesic/Dijkstra/: Dijkstra.h
include/BGAL/Integral/: Integral.h  Tetrahedron_arbq_rule.h
include/BGAL/Model/: ManifoldModel.h  Model.h  Model_Iterator.h
include/BGAL/Optimization/ALGLIB/: alglibinternal.h  alglibmisc.h  ap.h  dataanalysis.h  diffequations.h  fasttransforms.h  integration.h  interpolation.h  linalg.h  optimization.h  solvers.h  specialfunctions.h  statistics.h
include/BGAL/Optimization/GradientDescent/: GradientDescent.h
include/BGAL/Optimization/LBFGS/: LBFGS.h
include/BGAL/Optimization/LinearSystem/: LinearSystem.h
include/BGAL/PQP/: BV.h  BVTQ.h  Build.h  GetTime.h  MatVec.h  OBB_Disjoint.h  PQP.h  PQP_Compile.h  PQP_Internal.h  RectDist.h  Tri.h  TriDist.h
include/BGAL/PointCloudProcessing/Registration/ICP/: ICP.h
include/BGAL/Reconstruction/MarchingTetrahedra/: MarchingTetrahedra.h
include/BGAL/Tessellation2D/: Side2D.h  Tessellation2D.h
include/BGAL/Tessellation3D/: Side3D.h  Tessellation3D.h
lib/: Algorithm (Xrvitd-PC 的冲突副本 2022-07-25).lib  Algorithm.lib  Algorithmd.lib  BaseShape (Xrvitd-PC 的冲突副本 2022-07-25).lib  BaseShape.lib  CVTLike (Xrvitd-PC 的冲突副本 2022-07-25).lib  CVTLike.lib  Draw (Xrvitd-PC 的冲突副本 2022-07-25).lib  Draw.lib  Drawd.lib  Geodesic (Xrvitd-PC 的冲突副本 2022-07-25).lib  Geodesic.lib  Geodesicd.lib  Integral (Xrvitd-PC 的冲突副本 2022-07-25).lib  Integral.lib  Integrald.lib  Model (Xrvitd-PC 的冲突副本 2022-07-25).lib  Model.lib  PQP (Xrvitd-PC 的冲突副本 2022-07-25).lib  PQP.lib  PQPd.lib  PointCloudProcessing (Xrvitd-PC 的冲突副本 2022-07-25).lib  PointCloudProcessing.lib  PointCloudProcessingd.lib  Reconstruction (Xrvitd-PC 的冲突副本 2022-07-25).lib  Reconstruction.lib  Reconstructiond.lib  Tessellation2D (Xrvitd-PC 的冲突副本 2022-07-25).lib  Tessellation2D.lib  Tessellation3D (Xrvitd-PC 的冲突副本 2022-07-25).lib  Tessellation3D.lib
src/: CMakeLists.txt
src/Algorithm/: CMakeLists.txt
src/Algorithm/BOC/: BOC.cpp
src/BaseShape/: CMakeLists.txt  KDTree.cpp  Line.cpp  Point.cpp  Polygon.cpp  Triangle.cpp
src/CVTLike/: CMakeLists.txt  CPD.cpp  CVT (Xrvitd-PC 的冲突副本 2022-07-25).cpp  CVT.cpp
src/Draw/: CMakeLists.txt  DrawPS.cpp
src/Geodesic/: AbstractMethod.cpp  CMakeLists.txt
src/Geodesic/Dijkstra/: Dijkstra.cpp
src/Integral/: CMakeLists.txt  Integral.cpp  Tetrahedron_arbq_rule.cpp
src/Model/: CMakeLists.txt  ManifoldModel.cpp  Model.cpp  Model_Iterator.cpp
src/Optimization/: CMakeLists.txt
src/Optimization/ALGLIB/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  dataanalysis.cpp  diffequations.cpp  fasttransforms.cpp  integration.cpp  interpolation.cpp  linalg.cpp  optimization.cpp  solvers.cpp  specialfunctions.cpp  statistics.cpp
src/Optimization/GradientDescent/: GradientDescent.cpp
src/Optimization/LBFGS/: LBFGS.cpp
src/Optimization/LinearSystem/: LinearSystem.cpp
src/PQP/: BV.cpp  Build.cpp  CMakeLists.txt  PQP.cpp  TriDist.cpp
src/PointCloudProcessing/: CMakeLists.txt
src/PointCloudProcessing/Registration/ICP/: ICP.cpp
src/Reconstruction/: CMakeLists.txt
src/Reconstruction/MarchingTerahedra/: MarchingTetrahedra.cpp
src/Tessellation2D/: CMakeLists.txt  Side2D.cpp  Tessellation2D.cpp
src/Tessellation3D/: CMakeLists.txt  Side3D.cpp  Tessellation3D.cpp
test/: CMakeLists.txt  main.cpp
test/data/: CVTLBFGSTest.ps  KDTreeTest.txt
