cmake_minimum_required(VERSION 3.17)

add_subdirectory(Algorithm)
add_subdirectory(Optimization)
add_subdirectory(PQP)

add_subdirectory(BaseShape)

add_subdirectory(Draw)
add_subdirectory(Integral)
add_subdirectory(PointCloudProcessing)
add_subdirectory(Tessellation2D)

add_subdirectory(Model)

add_subdirectory(Geodesic)
add_subdirectory(Reconstruction)
add_subdirectory(Tessellation3D)
add_subdirectory(CVTLike)
